syntax = "proto3";
import "google/protobuf/struct.proto";

package parameter;

message Parameter {
    string parameter_id = 1;
    string name = 2;
    string description = 3;
    string type = 4;
    google.protobuf.Value value = 5;
    repeated google.protobuf.Value options = 6;
    repeated double range = 7;
}